@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	New features:
+	* ->close_panel support for closing the window and removing a panel
 
 0.007     2015-02-04 01:24:25+00:00 Europe/London
 	New features:
